<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_recepediapp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="266dp"
            android:layout_height="266dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="77dp"
            android:layout_marginLeft="77dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/recepediappicono" />

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_black"
            android:text="@string/welcome_login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/welcome_2"
            android:textAlignment="center"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/TextEmail"
                android:layout_width="294dp"
                android:layout_height="58dp"
                android:layout_margin="16dp"
                android:background="@drawable/boton_redondeado"
                android:ems="10"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/email_lbl"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/white"

                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/TextPassword"
                android:layout_width="294dp"
                android:layout_height="58dp"
                android:layout_margin="16dp"
                android:background="@drawable/boton_redondeado"
                android:ems="10"
                android:fontFamily="@font/lato_bold"
                android:hint="@string/pass_lbl"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/white"

                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="203dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/boton_login"

                android:fontFamily="@font/lato_black"
                android:onClick="onLogin"
                android:text="@string/login_btn_txt"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>